Code cleanup
Only kept default constructor for ConfigChangeResult.

ConfigChangeResult.java
Removed ConfigChangeResult(ResultCode, boolean, List<LocalizableMessage>) constructor.

AdministrationConnector.java:
In applyConfigurationChange(), fixed a bug with setting admin action required to true despite not actually doing any change.

FIFOEntryCache.java, SoftReferenceEntryCache.java:
Called ConfigChangeResult default constructor.